# prossa

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/prossa/: __init__.py  __main__.py  analyzer.py  config.toml  utils.py
tests/: conftest.py  test_analyzer.py  test_utils.py
